# BurstEngine

./: .gitignore  .gitmodules  Dockerfile  HELP.md  READMD.md  README.md  check.sh  env.sh  submit.sh
BMTrain/: .vim-arsync  .vim-arsync-qy  pyproject.toml
BMTrain/bmtrain/: __init__.py  init.py
BMTrain/bmtrain/benchmark/: send_recv.py
BMTrain/bmtrain/distributed/: __init__.py  ops.py  p2p_ops.py
BMTrain/bmtrain/nccl/: __init__.py
BMTrain/bmtrain/optim/: ref.py
BMTrain/example/: bench.sh  benchmark.py  entry.sh  run.sh  sbatch.sh  srun.sh
BMTrain/tests/: run.sh  test_load_grad.py
Burst-Attention/: .vim-arsync  pyproject.toml  test.sh  test_burst_ckpt.py  test_overlap.py
Burst-Attention/benchmarks/: benchmark.py  utils.py
Burst-Attention/burst_attn/: __init__.py  burst_attn_interface.py  burst_utils.py  comm.py  sl_loss.py  sparse_utils.py
Burst-Attention/test/: test.sh  test_burst.py  test_loss.py
BurstEngine/: .gitignore  .vim-arsync  .vim-arsync-cent  .vim-arsync-qiyuan  .vim-arsync-qy  test_event.py
BurstEngine/cpm/: arguments.py
data/: preprocess.sh
evaluation/kernel_bench/: README.md  attn.py  bench.md  bench_all.sh  bench_fb.md  bench_loong.sh  bench_usp.sh  benchmark_burst.py  benchmark_burst.sh  benchmark_burst_bak.py  benchmark_burst_signle_entry.py  benchmark_burst_single_entry.sh  benchmark_doublering.py  benchmark_dpa.py  benchmark_dpa.sh  benchmark_ds_ulysses.py  benchmark_ds_ulysses.sh  docker_entry.sh  double-ring.py  exp_data.csv  g43  kernel_perf.csv  mega-cp.py  multi_node_bench.sh  plot_kernel_bench.py  pre.sh  ratio.csv  (+11 more)
(+519 files in other folders)
